examples/datalog/15_arithmetic/31_multiply.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_multiply
Knowledge graph 'test_multiply' created.
Switched to knowledge graph: test_multiply
> .kg use test_multiply
Switched to knowledge graph: test_multiply
> +factors[(2, 3), (5, 4), (10, 10)].
Inserted 3 fact(s) into 'factors'.
> product(A, B, Result) :- factors(A, B), Result = A * B.
Script error: Query execution failed: Unsafe rule: Atom { relation: "product", args: [Variable("A"), Variable("B"), Variable("Result")] }. Variables ["Result"] in head do not appear in positive body atoms.
